# example-compressed-claim

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: main.yml
program/: Cargo.toml
program/src/: check_pda.rs  constants.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/src/instructions/: claim.rs  claim_and_decompress.rs  mod.rs
program/src/instructions/sdk/: shared.rs
program/tests/: functional.rs
