[package]
name = "light-compressed-claim"
version = "0.1.0"
description = "Light Protocol Compressed Claim"
authors = ["Light Protocol maintainers <info@lightprotocol.io>"]
repository = "https://github.com/lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
cpi = []

default = ["cpi"]

[dependencies]
solana-program = "2.2.1"
light-compressed-account = { git = "https://github.com/lightprotocol/light-protocol", rev = "51b0a9a3ec36306b17dc05f32fd5936cdfccadd4", default-features = false }
light-compressed-token-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "51b0a9a3ec36306b17dc05f32fd5936cdfccadd4", default-features = false }
thiserror = "2.0.11"
borsh = "0.10.0"

[dev-dependencies]
light-compressed-token-client = { git = "https://github.com/lightprotocol/light-protocol", rev = "51b0a9a3ec36306b17dc05f32fd5936cdfccadd4", default-features = false }
light-program-test = { git = "https://github.com/lightprotocol/light-protocol", rev = "51b0a9a3ec36306b17dc05f32fd5936cdfccadd4", default-features = false }
solana-program-test = "2.2.1"
light-client = { git = "https://github.com/lightprotocol/light-protocol", rev = "51b0a9a3ec36306b17dc05f32fd5936cdfccadd4", default-features = false }
solana-sdk = "2.2.1"
spl-token = "5.0.0"
light-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "51b0a9a3ec36306b17dc05f32fd5936cdfccadd4", default-features = false }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


