[package]
name = "light-compressed-claim"
version = "0.1.0"
description = "Light Protocol Compressed Claim"
authors = ["Light Protocol maintainers <info@lightprotocol.io>"]
repository = "https://github.com/lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
cpi = []

default = ["cpi"]

[dependencies]
solana-program = "2.2.1"
light-compressed-account = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba" }
light-compressed-token-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba" }
thiserror = "2.0.11"
borsh = "0.10.0"

[dev-dependencies]
solana-sdk = "2.2.1"
light-compressed-token = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba" }
light-compressed-token-client = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba" }
light-program-test = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba", features = ["v2"] }
solana-program-test = "2.2.1"
light-client = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba", features = ["v2"] }

spl-token = "5.0.0"
light-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "128b191ba" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(target_os, values("solana"))']


